sedols in data import

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -11,6 +11,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "theSedols = pd.read_csv(\"data/sedols.csv\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
