--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,12 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from datetime import datetime\n",
+    "from dateutil.relativedelta import relativedelta"
    ]
   },
   {
@@ -50,237 +52,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>Company Name</th>\n",
-       "      <th>FS_ID</th>\n",
-       "      <th>RETURN</th>\n",
-       "      <th>RCP</th>\n",
-       "      <th>RBP</th>\n",
-       "      <th>RSP</th>\n",
-       "      <th>REP</th>\n",
-       "      <th>RDP</th>\n",
-       "      <th>RPM71</th>\n",
-       "      <th>RSTDEV</th>\n",
-       "      <th>...</th>\n",
-       "      <th>BR1</th>\n",
-       "      <th>BR2</th>\n",
-       "      <th>EP1</th>\n",
-       "      <th>EP2</th>\n",
-       "      <th>RV1</th>\n",
-       "      <th>RV2</th>\n",
-       "      <th>CTEF</th>\n",
-       "      <th>9MFR</th>\n",
-       "      <th>8MFR</th>\n",
-       "      <th>LIT</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SEDOL</th>\n",
-       "      <th>DATE</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">200001</th>\n",
-       "      <th>2002-12-31</th>\n",
-       "      <td>AMAZON.COM INC</td>\n",
-       "      <td>RMCVZ9-S-US</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>99.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>82.0</td>\n",
-       "      <td>97.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>83.0</td>\n",
-       "      <td>84.0</td>\n",
-       "      <td>60.1667</td>\n",
-       "      <td>24.6395</td>\n",
-       "      <td>6.1009</td>\n",
-       "      <td>46.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2003-01-31</th>\n",
-       "      <td>AMAZON.COM INC</td>\n",
-       "      <td>RMCVZ9-S-US</td>\n",
-       "      <td>97.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>93.0</td>\n",
-       "      <td>97.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>88.0</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>55.6667</td>\n",
-       "      <td>55.6667</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>46.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2003-02-28</th>\n",
-       "      <td>AMAZON.COM INC</td>\n",
-       "      <td>RMCVZ9-S-US</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>99.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>93.0</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>82.0</td>\n",
-       "      <td>86.0</td>\n",
-       "      <td>61.5000</td>\n",
-       "      <td>14.5402</td>\n",
-       "      <td>14.5381</td>\n",
-       "      <td>48.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2003-03-31</th>\n",
-       "      <td>AMAZON.COM INC</td>\n",
-       "      <td>RMCVZ9-S-US</td>\n",
-       "      <td>98.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>98.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>87.0</td>\n",
-       "      <td>71.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>47.0</td>\n",
-       "      <td>40.6667</td>\n",
-       "      <td>32.2199</td>\n",
-       "      <td>25.1065</td>\n",
-       "      <td>48.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2003-04-30</th>\n",
-       "      <td>AMAZON.COM INC</td>\n",
-       "      <td>RMCVZ9-S-US</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>98.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>93.0</td>\n",
-       "      <td>88.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>44.1667</td>\n",
-       "      <td>11.4560</td>\n",
-       "      <td>11.1843</td>\n",
-       "      <td>50.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 26 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     Company Name        FS_ID  RETURN  RCP  RBP   RSP   REP  \\\n",
-       "SEDOL  DATE                                                                    \n",
-       "200001 2002-12-31  AMAZON.COM INC  RMCVZ9-S-US     9.0  6.0  1.0  28.0   8.0   \n",
-       "       2003-01-31  AMAZON.COM INC  RMCVZ9-S-US    97.0  6.0  1.0  35.0   7.0   \n",
-       "       2003-02-28  AMAZON.COM INC  RMCVZ9-S-US    68.0  6.0  1.0  27.0   8.0   \n",
-       "       2003-03-31  AMAZON.COM INC  RMCVZ9-S-US    98.0  6.0  1.0  27.0   9.0   \n",
-       "       2003-04-30  AMAZON.COM INC  RMCVZ9-S-US    61.0  6.0  1.0  21.0  10.0   \n",
-       "\n",
-       "                    RDP  RPM71  RSTDEV  ...   BR1   BR2  EP1  EP2   RV1   RV2  \\\n",
-       "SEDOL  DATE                             ...                                     \n",
-       "200001 2002-12-31  39.0   99.0    11.0  ...  82.0  97.0  9.0  6.0  83.0  84.0   \n",
-       "       2003-01-31  39.0   95.0    11.0  ...  93.0  97.0  9.0  6.0  88.0  41.0   \n",
-       "       2003-02-28  39.0   99.0    16.0  ...  93.0  92.0  9.0  7.0  82.0  86.0   \n",
-       "       2003-03-31  39.0   98.0    18.0  ...  87.0  71.0  8.0  6.0  25.0  47.0   \n",
-       "       2003-04-30  39.0   98.0    20.0  ...  93.0  88.0  7.0  5.0  50.0  22.0   \n",
-       "\n",
-       "                      CTEF     9MFR     8MFR   LIT  \n",
-       "SEDOL  DATE                                         \n",
-       "200001 2002-12-31  60.1667  24.6395   6.1009  46.0  \n",
-       "       2003-01-31  55.6667  55.6667      NaN  46.0  \n",
-       "       2003-02-28  61.5000  14.5402  14.5381  48.0  \n",
-       "       2003-03-31  40.6667  32.2199  25.1065  48.0  \n",
-       "       2003-04-30  44.1667  11.4560  11.1843  50.0  \n",
-       "\n",
-       "[5 rows x 26 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'factors' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/mr/bk7rgp3x59l2bnc9dxddl1t00000gn/T/ipykernel_42333/1059831808.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfactors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'factors' is not defined"
+     ]
     }
    ],
    "source": [
@@ -563,6 +347,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'stock_returns' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/mr/bk7rgp3x59l2bnc9dxddl1t00000gn/T/ipykernel_42333/1486204992.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mstock_returns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'stock_returns' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "stock_returns.index"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -781,6 +586,26 @@
    ],
    "source": [
     "benchmark_returns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# MISC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stock_returns = pd.read_csv(\n",
+    "        \"data/cleaned_return_data.csv\", \n",
+    "        parse_dates=[\"DATE\"],\n",
+    "        index_col=[0]\n",
+    "    )"
    ]
   },
   {
