portfolio/index returns + date consistency

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -597,15 +597,414 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "stock_returns = pd.read_csv(\n",
     "        \"data/cleaned_return_data.csv\", \n",
-    "        parse_dates=[\"DATE\"],\n",
-    "        index_col=[0]\n",
+    "        # parse_dates=[\"DATE\"],\n",
+    "        index_col=[0], \n",
+    "        converters={\"DATE\": lambda x: pd.to_datetime(x) + pd.offsets.MonthBegin(1)}\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>200001</th>\n",
+       "      <th>200169</th>\n",
+       "      <th>200230</th>\n",
+       "      <th>200247</th>\n",
+       "      <th>200291</th>\n",
+       "      <th>200369</th>\n",
+       "      <th>200418</th>\n",
+       "      <th>200582</th>\n",
+       "      <th>200597</th>\n",
+       "      <th>200784</th>\n",
+       "      <th>...</th>\n",
+       "      <th>BZ6VT8</th>\n",
+       "      <th>BZ8FLW</th>\n",
+       "      <th>BZ8VC5</th>\n",
+       "      <th>BZ8VJQ</th>\n",
+       "      <th>BZ9NZY</th>\n",
+       "      <th>BZB2K9</th>\n",
+       "      <th>BZBY20</th>\n",
+       "      <th>BZBY21</th>\n",
+       "      <th>BZBYZY</th>\n",
+       "      <th>BZBZ02</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DATE</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1995-02-01</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.332</td>\n",
+       "      <td>0.482</td>\n",
+       "      <td>-0.304</td>\n",
+       "      <td>0.432</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.037</td>\n",
+       "      <td>0.848</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.023</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1995-03-01</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.346</td>\n",
+       "      <td>0.251</td>\n",
+       "      <td>0.436</td>\n",
+       "      <td>0.078</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.295</td>\n",
+       "      <td>-0.040</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.833</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1995-04-01</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.307</td>\n",
+       "      <td>-0.149</td>\n",
+       "      <td>-0.564</td>\n",
+       "      <td>-0.358</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.586</td>\n",
+       "      <td>0.794</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.753</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1995-05-01</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.033</td>\n",
+       "      <td>0.186</td>\n",
+       "      <td>-0.351</td>\n",
+       "      <td>0.011</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.556</td>\n",
+       "      <td>0.044</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>1.151</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1995-06-01</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.093</td>\n",
+       "      <td>-0.036</td>\n",
+       "      <td>-0.048</td>\n",
+       "      <td>-0.014</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.298</td>\n",
+       "      <td>-0.889</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.088</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-09-01</th>\n",
+       "      <td>-0.158</td>\n",
+       "      <td>5.981</td>\n",
+       "      <td>0.078</td>\n",
+       "      <td>-0.425</td>\n",
+       "      <td>0.456</td>\n",
+       "      <td>-2.051</td>\n",
+       "      <td>-1.376</td>\n",
+       "      <td>-0.232</td>\n",
+       "      <td>-0.315</td>\n",
+       "      <td>-0.213</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.636</td>\n",
+       "      <td>1.111</td>\n",
+       "      <td>-0.585</td>\n",
+       "      <td>1.432</td>\n",
+       "      <td>-0.066</td>\n",
+       "      <td>-4.4</td>\n",
+       "      <td>-0.435</td>\n",
+       "      <td>-2.483</td>\n",
+       "      <td>-1.591</td>\n",
+       "      <td>-0.464</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-10-01</th>\n",
+       "      <td>-0.398</td>\n",
+       "      <td>5.981</td>\n",
+       "      <td>-0.368</td>\n",
+       "      <td>0.384</td>\n",
+       "      <td>-0.172</td>\n",
+       "      <td>-0.891</td>\n",
+       "      <td>0.516</td>\n",
+       "      <td>-0.232</td>\n",
+       "      <td>0.447</td>\n",
+       "      <td>-0.888</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.143</td>\n",
+       "      <td>-1.590</td>\n",
+       "      <td>-0.585</td>\n",
+       "      <td>0.477</td>\n",
+       "      <td>-0.066</td>\n",
+       "      <td>-4.4</td>\n",
+       "      <td>0.488</td>\n",
+       "      <td>0.172</td>\n",
+       "      <td>1.063</td>\n",
+       "      <td>0.921</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-11-01</th>\n",
+       "      <td>-0.023</td>\n",
+       "      <td>5.981</td>\n",
+       "      <td>-0.198</td>\n",
+       "      <td>0.222</td>\n",
+       "      <td>1.212</td>\n",
+       "      <td>1.220</td>\n",
+       "      <td>0.101</td>\n",
+       "      <td>-0.232</td>\n",
+       "      <td>-0.923</td>\n",
+       "      <td>1.250</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.945</td>\n",
+       "      <td>0.246</td>\n",
+       "      <td>-0.585</td>\n",
+       "      <td>-0.129</td>\n",
+       "      <td>-0.066</td>\n",
+       "      <td>-4.4</td>\n",
+       "      <td>-0.473</td>\n",
+       "      <td>-4.143</td>\n",
+       "      <td>-0.433</td>\n",
+       "      <td>-0.646</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-01</th>\n",
+       "      <td>-0.004</td>\n",
+       "      <td>5.981</td>\n",
+       "      <td>-0.002</td>\n",
+       "      <td>0.082</td>\n",
+       "      <td>-0.257</td>\n",
+       "      <td>0.032</td>\n",
+       "      <td>-0.102</td>\n",
+       "      <td>-0.232</td>\n",
+       "      <td>-0.009</td>\n",
+       "      <td>0.146</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.012</td>\n",
+       "      <td>0.041</td>\n",
+       "      <td>-0.585</td>\n",
+       "      <td>-0.041</td>\n",
+       "      <td>-0.066</td>\n",
+       "      <td>-4.4</td>\n",
+       "      <td>0.106</td>\n",
+       "      <td>-0.121</td>\n",
+       "      <td>0.085</td>\n",
+       "      <td>-0.002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-01</th>\n",
+       "      <td>-0.233</td>\n",
+       "      <td>5.981</td>\n",
+       "      <td>-0.300</td>\n",
+       "      <td>-0.048</td>\n",
+       "      <td>-0.568</td>\n",
+       "      <td>-1.337</td>\n",
+       "      <td>0.258</td>\n",
+       "      <td>-0.232</td>\n",
+       "      <td>-0.438</td>\n",
+       "      <td>0.792</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.191</td>\n",
+       "      <td>-1.950</td>\n",
+       "      <td>-0.585</td>\n",
+       "      <td>-1.326</td>\n",
+       "      <td>-0.066</td>\n",
+       "      <td>-4.4</td>\n",
+       "      <td>0.016</td>\n",
+       "      <td>2.269</td>\n",
+       "      <td>-0.303</td>\n",
+       "      <td>-0.088</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>300 rows × 1994 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            200001  200169  200230  200247  200291  200369  200418  200582  \\\n",
+       "DATE                                                                         \n",
+       "1995-02-01   0.000   0.332   0.482  -0.304   0.432   0.000   0.000   0.000   \n",
+       "1995-03-01   0.000   0.346   0.251   0.436   0.078   0.000   0.000   0.000   \n",
+       "1995-04-01   0.000   0.307  -0.149  -0.564  -0.358   0.000   0.000   0.000   \n",
+       "1995-05-01   0.000   0.033   0.186  -0.351   0.011   0.000   0.000   0.000   \n",
+       "1995-06-01   0.000  -0.093  -0.036  -0.048  -0.014   0.000   0.000   0.000   \n",
+       "...            ...     ...     ...     ...     ...     ...     ...     ...   \n",
+       "2019-09-01  -0.158   5.981   0.078  -0.425   0.456  -2.051  -1.376  -0.232   \n",
+       "2019-10-01  -0.398   5.981  -0.368   0.384  -0.172  -0.891   0.516  -0.232   \n",
+       "2019-11-01  -0.023   5.981  -0.198   0.222   1.212   1.220   0.101  -0.232   \n",
+       "2019-12-01  -0.004   5.981  -0.002   0.082  -0.257   0.032  -0.102  -0.232   \n",
+       "2020-01-01  -0.233   5.981  -0.300  -0.048  -0.568  -1.337   0.258  -0.232   \n",
+       "\n",
+       "            200597  200784  ...  BZ6VT8  BZ8FLW  BZ8VC5  BZ8VJQ  BZ9NZY  \\\n",
+       "DATE                        ...                                           \n",
+       "1995-02-01   0.037   0.848  ...   0.000   0.023   0.000   0.000   0.000   \n",
+       "1995-03-01   0.295  -0.040  ...   0.000  -0.833   0.000   0.000   0.000   \n",
+       "1995-04-01   0.586   0.794  ...   0.000   0.753   0.000   0.000   0.000   \n",
+       "1995-05-01   0.556   0.044  ...   0.000   1.151   0.000   0.000   0.000   \n",
+       "1995-06-01  -0.298  -0.889  ...   0.000  -0.088   0.000   0.000   0.000   \n",
+       "...            ...     ...  ...     ...     ...     ...     ...     ...   \n",
+       "2019-09-01  -0.315  -0.213  ...   0.636   1.111  -0.585   1.432  -0.066   \n",
+       "2019-10-01   0.447  -0.888  ...  -0.143  -1.590  -0.585   0.477  -0.066   \n",
+       "2019-11-01  -0.923   1.250  ...   0.945   0.246  -0.585  -0.129  -0.066   \n",
+       "2019-12-01  -0.009   0.146  ...  -0.012   0.041  -0.585  -0.041  -0.066   \n",
+       "2020-01-01  -0.438   0.792  ...  -0.191  -1.950  -0.585  -1.326  -0.066   \n",
+       "\n",
+       "            BZB2K9  BZBY20  BZBY21  BZBYZY  BZBZ02  \n",
+       "DATE                                                \n",
+       "1995-02-01     0.0   0.000   0.000   0.000   0.000  \n",
+       "1995-03-01     0.0   0.000   0.000   0.000   0.000  \n",
+       "1995-04-01     0.0   0.000   0.000   0.000   0.000  \n",
+       "1995-05-01     0.0   0.000   0.000   0.000   0.000  \n",
+       "1995-06-01     0.0   0.000   0.000   0.000   0.000  \n",
+       "...            ...     ...     ...     ...     ...  \n",
+       "2019-09-01    -4.4  -0.435  -2.483  -1.591  -0.464  \n",
+       "2019-10-01    -4.4   0.488   0.172   1.063   0.921  \n",
+       "2019-11-01    -4.4  -0.473  -4.143  -0.433  -0.646  \n",
+       "2019-12-01    -4.4   0.106  -0.121   0.085  -0.002  \n",
+       "2020-01-01    -4.4   0.016   2.269  -0.303  -0.088  \n",
+       "\n",
+       "[300 rows x 1994 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stock_returns"
    ]
   },
   {
