testing portfolio returns

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,11 +14,305 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "theSedols = pd.read_csv(\"data/sedols.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = pd.read_csv(\"output/predictions.csv\", index_col=[0, 1, 2]).sort_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stock_returns = pd.read_csv(\n",
+    "    \"./data/cleaned_return_data.csv\", \n",
+    "    # nrows=3, \n",
+    "    parse_dates=['DATE'], \n",
+    "    index_col=0\n",
+    ").fillna(method='ffill').fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stock_returns.loc[\"2006-01-01\", \"BZBY21\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RETURN</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SEDOL</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>200001</th>\n",
+       "      <td>0.139706</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200169</th>\n",
+       "      <td>0.793067</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200230</th>\n",
+       "      <td>0.845063</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200247</th>\n",
+       "      <td>0.758403</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200418</th>\n",
+       "      <td>0.139706</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BZ12WP</th>\n",
+       "      <td>0.502101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BZ2Y3W</th>\n",
+       "      <td>0.502101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BZ8FLW</th>\n",
+       "      <td>0.502101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BZB2K9</th>\n",
+       "      <td>0.502101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BZBY20</th>\n",
+       "      <td>0.139706</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>952 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          RETURN\n",
+       "SEDOL           \n",
+       "200001  0.139706\n",
+       "200169  0.793067\n",
+       "200230  0.845063\n",
+       "200247  0.758403\n",
+       "200418  0.139706\n",
+       "...          ...\n",
+       "BZ12WP  0.502101\n",
+       "BZ2Y3W  0.502101\n",
+       "BZ8FLW  0.502101\n",
+       "BZB2K9  0.502101\n",
+       "BZBY20  0.139706\n",
+       "\n",
+       "[952 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions.loc[\"2006-01-01\", \"AdaBoost\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200001   -0.148507\n",
+       "200169   -0.382258\n",
+       "200230    0.152956\n",
+       "200247   -0.019718\n",
+       "200291    0.000000\n",
+       "            ...   \n",
+       "BZB2K9    1.483206\n",
+       "BZBY20   -0.095279\n",
+       "BZBY21    0.000000\n",
+       "BZBYZY    0.000000\n",
+       "BZBZ02    0.000000\n",
+       "Length: 1994, dtype: float64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stock_returns.loc[\"2006-01-01\"].multiply(predictions.loc[\"2006-01-01\", \"AdaBoost\"].RETURN).fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RETURN</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SEDOL</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>200001</th>\n",
+       "      <td>0.139706</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200169</th>\n",
+       "      <td>0.793067</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200230</th>\n",
+       "      <td>0.845063</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200247</th>\n",
+       "      <td>0.758403</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200418</th>\n",
+       "      <td>0.139706</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BZ12WP</th>\n",
+       "      <td>0.502101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BZ2Y3W</th>\n",
+       "      <td>0.502101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BZ8FLW</th>\n",
+       "      <td>0.502101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BZB2K9</th>\n",
+       "      <td>0.502101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BZBY20</th>\n",
+       "      <td>0.139706</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>952 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          RETURN\n",
+       "SEDOL           \n",
+       "200001  0.139706\n",
+       "200169  0.793067\n",
+       "200230  0.845063\n",
+       "200247  0.758403\n",
+       "200418  0.139706\n",
+       "...          ...\n",
+       "BZ12WP  0.502101\n",
+       "BZ2Y3W  0.502101\n",
+       "BZ8FLW  0.502101\n",
+       "BZB2K9  0.502101\n",
+       "BZBY20  0.139706\n",
+       "\n",
+       "[952 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions.loc[\"2006-01-01\", \"AdaBoost\"].prod"
    ]
   },
   {
@@ -89,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
