index vs pred inconcsistency fix

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -66,112 +66,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>RETURN</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SEDOL</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>200001</th>\n",
-       "      <td>0.139706</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>200169</th>\n",
-       "      <td>0.793067</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>200230</th>\n",
-       "      <td>0.845063</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>200247</th>\n",
-       "      <td>0.758403</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>200418</th>\n",
-       "      <td>0.139706</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>BZ12WP</th>\n",
-       "      <td>0.502101</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>BZ2Y3W</th>\n",
-       "      <td>0.502101</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>BZ8FLW</th>\n",
-       "      <td>0.502101</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>BZB2K9</th>\n",
-       "      <td>0.502101</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>BZBY20</th>\n",
-       "      <td>0.139706</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>952 rows × 1 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "          RETURN\n",
-       "SEDOL           \n",
-       "200001  0.139706\n",
-       "200169  0.793067\n",
-       "200230  0.845063\n",
-       "200247  0.758403\n",
-       "200418  0.139706\n",
-       "...          ...\n",
-       "BZ12WP  0.502101\n",
-       "BZ2Y3W  0.502101\n",
-       "BZ8FLW  0.502101\n",
-       "BZB2K9  0.502101\n",
-       "BZBY20  0.139706\n",
-       "\n",
-       "[952 rows x 1 columns]"
+       "Index(['200001', '200169', '200230', '200247', '200418', '200582', '200597',\n",
+       "       '200784', '200815', '201156',\n",
+       "       ...\n",
+       "       'BYXB1T', 'BYXB20', 'BYXD7B', 'BYY8XK', 'BYZGYC', 'BZ12WP', 'BZ2Y3W',\n",
+       "       'BZ8FLW', 'BZB2K9', 'BZBY20'],\n",
+       "      dtype='object', name='SEDOL', length=952)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "predictions.loc[\"2006-01-01\", \"AdaBoost\"]"
+    "predictions.loc[\"2006-01-01\", \"AdaBoost\"].index"
    ]
   },
   {
