--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,6 +228,472 @@
    ],
    "source": [
     "predictions.loc[\"2006-01-01\", \"AdaBoost\"].prod"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "factors_subset = pd.read_csv(\n",
+    "    \"data/rus1000_stocks_factors_subset.csv\",\n",
+    "    converters={\"DATE\": lambda x: pd.to_datetime(x) + pd.offsets.MonthBegin(1)},\n",
+    "    # parse_dates=[\"DATE\"],\n",
+    "    index_col=[1, 0]\n",
+    ").sort_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "factors_subset[\"TARGET\"] = factors_subset.groupby(level=1).RETURN.shift(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DATE        SEDOL \n",
+       "2003-01-01  200001     97.0\n",
+       "            200169      1.0\n",
+       "            200230     42.0\n",
+       "            200247     97.0\n",
+       "            200418    100.0\n",
+       "                      ...  \n",
+       "2018-12-01  221685      NaN\n",
+       "            221699      NaN\n",
+       "            221922      NaN\n",
+       "            222263      NaN\n",
+       "            222470      NaN\n",
+       "Name: RETURN, Length: 32880, dtype: float64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "factors_subset.groupby(level=1).RETURN.shift(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Company Name</th>\n",
+       "      <th>FS_ID</th>\n",
+       "      <th>RETURN</th>\n",
+       "      <th>RCP</th>\n",
+       "      <th>RBP</th>\n",
+       "      <th>RSP</th>\n",
+       "      <th>REP</th>\n",
+       "      <th>RDP</th>\n",
+       "      <th>RPM71</th>\n",
+       "      <th>RSTDEV</th>\n",
+       "      <th>...</th>\n",
+       "      <th>BR2</th>\n",
+       "      <th>EP1</th>\n",
+       "      <th>EP2</th>\n",
+       "      <th>RV1</th>\n",
+       "      <th>RV2</th>\n",
+       "      <th>CTEF</th>\n",
+       "      <th>9MFR</th>\n",
+       "      <th>8MFR</th>\n",
+       "      <th>LIT</th>\n",
+       "      <th>TARGET</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DATE</th>\n",
+       "      <th>SEDOL</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2003-01-01</th>\n",
+       "      <th>200001</th>\n",
+       "      <td>AMAZON.COM INC</td>\n",
+       "      <td>RMCVZ9-S-US</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>60.1667</td>\n",
+       "      <td>24.6395</td>\n",
+       "      <td>6.1009</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>97.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2003-02-01</th>\n",
+       "      <th>200001</th>\n",
+       "      <td>AMAZON.COM INC</td>\n",
+       "      <td>RMCVZ9-S-US</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>55.6667</td>\n",
+       "      <td>55.6667</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>68.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2003-03-01</th>\n",
+       "      <th>200001</th>\n",
+       "      <td>AMAZON.COM INC</td>\n",
+       "      <td>RMCVZ9-S-US</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>61.5000</td>\n",
+       "      <td>14.5402</td>\n",
+       "      <td>14.5381</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>98.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2003-04-01</th>\n",
+       "      <th>200001</th>\n",
+       "      <td>AMAZON.COM INC</td>\n",
+       "      <td>RMCVZ9-S-US</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>40.6667</td>\n",
+       "      <td>32.2199</td>\n",
+       "      <td>25.1065</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>61.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2003-05-01</th>\n",
+       "      <th>200001</th>\n",
+       "      <td>AMAZON.COM INC</td>\n",
+       "      <td>RMCVZ9-S-US</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>44.1667</td>\n",
+       "      <td>11.4560</td>\n",
+       "      <td>11.1843</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>94.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-08-01</th>\n",
+       "      <th>200001</th>\n",
+       "      <td>AMAZON.COM INC</td>\n",
+       "      <td>RMCVZ9-S-US</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>44.8333</td>\n",
+       "      <td>19.7877</td>\n",
+       "      <td>19.8462</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>92.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-09-01</th>\n",
+       "      <th>200001</th>\n",
+       "      <td>AMAZON.COM INC</td>\n",
+       "      <td>RMCVZ9-S-US</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>64.6667</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>49.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-10-01</th>\n",
+       "      <th>200001</th>\n",
+       "      <td>AMAZON.COM INC</td>\n",
+       "      <td>RMCVZ9-S-US</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>54.0000</td>\n",
+       "      <td>16.0008</td>\n",
+       "      <td>16.1152</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-11-01</th>\n",
+       "      <th>200001</th>\n",
+       "      <td>AMAZON.COM INC</td>\n",
+       "      <td>RMCVZ9-S-US</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>62.0000</td>\n",
+       "      <td>37.8429</td>\n",
+       "      <td>37.5370</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>66.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-12-01</th>\n",
+       "      <th>200001</th>\n",
+       "      <td>AMAZON.COM INC</td>\n",
+       "      <td>RMCVZ9-S-US</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>62.1667</td>\n",
+       "      <td>18.0000</td>\n",
+       "      <td>35.6632</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>192 rows × 27 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Company Name        FS_ID  RETURN   RCP  RBP   RSP   REP  \\\n",
+       "DATE       SEDOL                                                                \n",
+       "2003-01-01 200001  AMAZON.COM INC  RMCVZ9-S-US     9.0   6.0  1.0  28.0   8.0   \n",
+       "2003-02-01 200001  AMAZON.COM INC  RMCVZ9-S-US    97.0   6.0  1.0  35.0   7.0   \n",
+       "2003-03-01 200001  AMAZON.COM INC  RMCVZ9-S-US    68.0   6.0  1.0  27.0   8.0   \n",
+       "2003-04-01 200001  AMAZON.COM INC  RMCVZ9-S-US    98.0   6.0  1.0  27.0   9.0   \n",
+       "2003-05-01 200001  AMAZON.COM INC  RMCVZ9-S-US    61.0   6.0  1.0  21.0  10.0   \n",
+       "...                           ...          ...     ...   ...  ...   ...   ...   \n",
+       "2018-08-01 200001  AMAZON.COM INC  RMCVZ9-S-US    66.0  12.0  8.0  25.0  18.0   \n",
+       "2018-09-01 200001  AMAZON.COM INC  RMCVZ9-S-US    92.0  11.0  8.0  25.0  18.0   \n",
+       "2018-10-01 200001  AMAZON.COM INC  RMCVZ9-S-US    49.0  11.0  8.0  22.0  18.0   \n",
+       "2018-11-01 200001  AMAZON.COM INC  RMCVZ9-S-US     9.0  11.0  8.0  22.0  18.0   \n",
+       "2018-12-01 200001  AMAZON.COM INC  RMCVZ9-S-US    66.0  12.0  8.0  26.0  18.0   \n",
+       "\n",
+       "                    RDP  RPM71  RSTDEV  ...   BR2  EP1  EP2   RV1   RV2  \\\n",
+       "DATE       SEDOL                        ...                               \n",
+       "2003-01-01 200001  39.0   99.0    11.0  ...  97.0  9.0  6.0  83.0  84.0   \n",
+       "2003-02-01 200001  39.0   95.0    11.0  ...  97.0  9.0  6.0  88.0  41.0   \n",
+       "2003-03-01 200001  39.0   99.0    16.0  ...  92.0  9.0  7.0  82.0  86.0   \n",
+       "2003-04-01 200001  39.0   98.0    18.0  ...  71.0  8.0  6.0  25.0  47.0   \n",
+       "2003-05-01 200001  39.0   98.0    20.0  ...  88.0  7.0  5.0  50.0  22.0   \n",
+       "...                 ...    ...     ...  ...   ...  ...  ...   ...   ...   \n",
+       "2018-08-01 200001  33.0   97.0    34.0  ...  93.0  7.0  6.0  34.0  38.0   \n",
+       "2018-09-01 200001  33.0   92.0    35.0  ...  95.0  8.0  7.0  91.0  93.0   \n",
+       "2018-10-01 200001  33.0   88.0    35.0  ...  92.0  8.0  7.0  64.0  63.0   \n",
+       "2018-11-01 200001  33.0   95.0    33.0  ...  94.0  9.0  8.0  86.0  84.0   \n",
+       "2018-12-01 200001  33.0   47.0    30.0  ...  93.0  9.0  8.0  85.0  78.0   \n",
+       "\n",
+       "                      CTEF     9MFR     8MFR   LIT  TARGET  \n",
+       "DATE       SEDOL                                            \n",
+       "2003-01-01 200001  60.1667  24.6395   6.1009  46.0    97.0  \n",
+       "2003-02-01 200001  55.6667  55.6667      NaN  46.0    68.0  \n",
+       "2003-03-01 200001  61.5000  14.5402  14.5381  48.0    98.0  \n",
+       "2003-04-01 200001  40.6667  32.2199  25.1065  48.0    61.0  \n",
+       "2003-05-01 200001  44.1667  11.4560  11.1843  50.0    94.0  \n",
+       "...                    ...      ...      ...   ...     ...  \n",
+       "2018-08-01 200001  44.8333  19.7877  19.8462  50.0    92.0  \n",
+       "2018-09-01 200001  64.6667      NaN      NaN  14.0    49.0  \n",
+       "2018-10-01 200001  54.0000  16.0008  16.1152  28.0     9.0  \n",
+       "2018-11-01 200001  62.0000  37.8429  37.5370  28.0    66.0  \n",
+       "2018-12-01 200001  62.1667  18.0000  35.6632  28.0     NaN  \n",
+       "\n",
+       "[192 rows x 27 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "factors_subset.loc[(slice(None), 200001), :]"
    ]
   },
   {
