--- a/testing.ipynb
+++ b/testing.ipynb
@@ -1962,6 +1962,219 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>MODEL</th>\n",
+       "      <th>RCP</th>\n",
+       "      <th>RBP</th>\n",
+       "      <th>RSP</th>\n",
+       "      <th>REP</th>\n",
+       "      <th>RDP</th>\n",
+       "      <th>RPM71</th>\n",
+       "      <th>RSTDEV</th>\n",
+       "      <th>ROA1</th>\n",
+       "      <th>9MFR</th>\n",
+       "      <th>8MFR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2003-02-01</td>\n",
+       "      <td>AdaBoost</td>\n",
+       "      <td>0.004826</td>\n",
+       "      <td>0.054284</td>\n",
+       "      <td>0.071222</td>\n",
+       "      <td>0.180985</td>\n",
+       "      <td>0.028671</td>\n",
+       "      <td>0.058879</td>\n",
+       "      <td>0.246612</td>\n",
+       "      <td>0.046942</td>\n",
+       "      <td>0.161751</td>\n",
+       "      <td>0.145829</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2003-02-01</td>\n",
+       "      <td>LinearRegression</td>\n",
+       "      <td>-0.460260</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.000000</td>\n",
+       "      <td>-0.000000</td>\n",
+       "      <td>3.208917</td>\n",
+       "      <td>6.987360</td>\n",
+       "      <td>-0.839606</td>\n",
+       "      <td>-0.072644</td>\n",
+       "      <td>8.642798</td>\n",
+       "      <td>-0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2003-03-01</td>\n",
+       "      <td>AdaBoost</td>\n",
+       "      <td>0.008636</td>\n",
+       "      <td>0.039992</td>\n",
+       "      <td>0.048617</td>\n",
+       "      <td>0.147165</td>\n",
+       "      <td>0.066046</td>\n",
+       "      <td>0.032581</td>\n",
+       "      <td>0.033005</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.025096</td>\n",
+       "      <td>0.598861</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2003-03-01</td>\n",
+       "      <td>LinearRegression</td>\n",
+       "      <td>-0.000000</td>\n",
+       "      <td>2.811075</td>\n",
+       "      <td>-0.201232</td>\n",
+       "      <td>0.080957</td>\n",
+       "      <td>3.924920</td>\n",
+       "      <td>7.350792</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.005868</td>\n",
+       "      <td>3.994385</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2003-04-01</td>\n",
+       "      <td>AdaBoost</td>\n",
+       "      <td>0.206586</td>\n",
+       "      <td>0.014348</td>\n",
+       "      <td>0.019835</td>\n",
+       "      <td>0.011256</td>\n",
+       "      <td>0.148790</td>\n",
+       "      <td>0.034645</td>\n",
+       "      <td>0.033035</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.013639</td>\n",
+       "      <td>0.517866</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2003-04-01</td>\n",
+       "      <td>LinearRegression</td>\n",
+       "      <td>0.216228</td>\n",
+       "      <td>1.513377</td>\n",
+       "      <td>0.536979</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.586011</td>\n",
+       "      <td>5.917961</td>\n",
+       "      <td>0.553039</td>\n",
+       "      <td>3.885534</td>\n",
+       "      <td>3.440568</td>\n",
+       "      <td>0.300942</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         DATE             MODEL       RCP       RBP       RSP       REP  \\\n",
+       "0  2003-02-01          AdaBoost  0.004826  0.054284  0.071222  0.180985   \n",
+       "1  2003-02-01  LinearRegression -0.460260  0.000000 -0.000000 -0.000000   \n",
+       "2  2003-03-01          AdaBoost  0.008636  0.039992  0.048617  0.147165   \n",
+       "3  2003-03-01  LinearRegression -0.000000  2.811075 -0.201232  0.080957   \n",
+       "4  2003-04-01          AdaBoost  0.206586  0.014348  0.019835  0.011256   \n",
+       "5  2003-04-01  LinearRegression  0.216228  1.513377  0.536979  0.000000   \n",
+       "6         NaN               NaN       NaN       NaN       NaN       NaN   \n",
+       "7         NaN               NaN       NaN       NaN       NaN       NaN   \n",
+       "8         NaN               NaN       NaN       NaN       NaN       NaN   \n",
+       "\n",
+       "        RDP     RPM71    RSTDEV      ROA1      9MFR      8MFR  \n",
+       "0  0.028671  0.058879  0.246612  0.046942  0.161751  0.145829  \n",
+       "1  3.208917  6.987360 -0.839606 -0.072644  8.642798 -0.000000  \n",
+       "2  0.066046  0.032581  0.033005  0.000000  0.025096  0.598861  \n",
+       "3  3.924920  7.350792  0.000000  3.005868  3.994385  0.000000  \n",
+       "4  0.148790  0.034645  0.033035  0.000000  0.013639  0.517866  \n",
+       "5  3.586011  5.917961  0.553039  3.885534  3.440568  0.300942  \n",
+       "6       NaN       NaN       NaN       NaN       NaN       NaN  \n",
+       "7       NaN       NaN       NaN       NaN       NaN       NaN  \n",
+       "8       NaN       NaN       NaN       NaN       NaN       NaN  "
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv(\"output/feature_importance_Final.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
