CTEF column bug

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
     "    './data/rus1000_stocks_factors.csv', \n",
     "    on_bad_lines='skip', \n",
     "    header = 2, \n",
-    "    nrows = 2000, \n",
+    "    nrows = 200000, \n",
     "    low_memory=False, \n",
     "    converters={\n",
     "        'SEDOL': lambda x: x[:6], \n",
@@ -46,6 +46,16 @@
     "df[\"TARGET\"] = df.groupby(level=\"SEDOL\").RETURN.shift(-1)\n",
     "# print(df)\n",
     "df = df.groupby(level=1).fillna(method='ffill').fillna(0)\n",
+    "df.sort_index(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"MODEL\"] = \"CTEF\"\n",
     "df.sort_index(inplace=True)"
    ]
   },
@@ -2171,6 +2181,130 @@
    ],
    "source": [
     "pd.read_csv(\"output/feature_importance_Final.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>CTEF</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DATE</th>\n",
+       "      <th>MODEL</th>\n",
+       "      <th>SEDOL</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">2004-11-01</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">CTEF</th>\n",
+       "      <th>200001</th>\n",
+       "      <td>0.251303</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200169</th>\n",
+       "      <td>0.152242</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200230</th>\n",
+       "      <td>0.425443</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200247</th>\n",
+       "      <td>0.879562</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200418</th>\n",
+       "      <td>0.474453</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">2018-12-01</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">CTEF</th>\n",
+       "      <th>BZ56Q6</th>\n",
+       "      <td>0.300524</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BZ6TS2</th>\n",
+       "      <td>0.278534</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BZ6VT8</th>\n",
+       "      <td>0.717801</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BZ8VJQ</th>\n",
+       "      <td>0.396859</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BZBY20</th>\n",
+       "      <td>0.682723</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>164231 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             CTEF\n",
+       "DATE       MODEL SEDOL           \n",
+       "2004-11-01 CTEF  200001  0.251303\n",
+       "                 200169  0.152242\n",
+       "                 200230  0.425443\n",
+       "                 200247  0.879562\n",
+       "                 200418  0.474453\n",
+       "...                           ...\n",
+       "2018-12-01 CTEF  BZ56Q6  0.300524\n",
+       "                 BZ6TS2  0.278534\n",
+       "                 BZ6VT8  0.717801\n",
+       "                 BZ8VJQ  0.396859\n",
+       "                 BZBY20  0.682723\n",
+       "\n",
+       "[164231 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[[\"MODEL\", \"CTEF\"]].loc[\"2004-11-01\":].set_index(\n",
+    "                \"MODEL\", append=True\n",
+    "            ).reorder_levels(\n",
+    "                [\"DATE\", \"MODEL\", \"SEDOL\"]\n",
+    "            ).groupby(level=0).rank(pct=True).rename(columns={\"CTEF\": \"RETURN\"})"
    ]
   },
   {
